* Fixes issue #18763: close_fd file descriptors are now closed after
  any preexec_fn call.

-----------------
2013-06-15 3.2.5rc1
-----------------

* Fixes issue #16650 - Don't reference ECHILD from outside the local scope.
* Unittests no longer spew any test data for human verification to stdout.
* Remove a bare print to stdout that could have happened if the child process
  wrote garbage to its pre-exec error pipe.
* Fixes issue #16327 - the subprocess module no longer leaks file descriptors
  used for stdin/stdout/stderr pipes to the child when the fork() fails.  It
  also no longer potentially double closes these pipe fds.
* Correct the Python version check around use of imp_module to specify 2.6.3
  as the minimum version that exists in. Why is anyone using such an old 2.6?
* Fixes Issue #16114: The subprocess module no longer provides a misleading
  error message stating that args[0] did not exist when either the cwd or
  executable keyword arguments specified a path that did not exist.
* Add more Popen cwd tests.
* Handle errno.ECHILD in poll.
* Don't leak a reference to the gc module on capi use error.
* Check return value to avoid a crash if the capi were misused.
* Check result of PyObject_IsTrue().
* Adds test_universal_newlines_communicate_input_none.
* Most everything above consists of backports.  See the hg logs for their
  upstream hg.python.org cpython revision numbers.

----------------
2012-06-10 3.2.3
----------------

* Fixes the references to the 'surrogateescape' unicode encoding error
  handler that does not exist in Python 2.x.  'strict' is used so that
  a UnicodeEncodeError exception is raised in these situations.  These
  MAY occur if your sys.getfilesystemencoding() is not UTF-8 and
  attempt to use a non-ascii executable, args or env values.  Prior to
  this change, those would result in a hard to debug LookupError for
  surrogateescape.
* Issue #15000: Support the "unique" x32 architecture in _posixsubprocess.c.